fix(all): Fixed list margin errors in menu class and navigation class. Fixed annoying white space in nav.

--- a/src/sass/base/_core.sass
+++ b/src/sass/base/_core.sass
@@ -51,7 +51,7 @@ $list-spacing-v: 1.0rem
 $list-spacing-h: 1.5rem
 
 ol,
-ul
+ul:not(.nav__menu):not(.menu)
     margin-left: $list-spacing-h
 
     // Pseudo
