--- a/src/sass/layouts/_menu.sass
+++ b/src/sass/layouts/_menu.sass
@@ -39,6 +39,7 @@ $submenu-name: 'submenu' !default
             padding: $menu-padding
             color: $font-color
             border-radius: $border-radius
+            text-decoration: none
 
             // Pseudo
             &:hover
