--- a/src/sass/layouts/_navigation.sass
+++ b/src/sass/layouts/_navigation.sass
@@ -141,6 +141,7 @@ $navig-font-color    :   $font-color !default
                 shrink: 0
                 basis: auto
             align-items: center
+            padding: 0 $navig-padding
             border-right: 1px solid $navig-colorborder 
         
         &__menu
@@ -148,6 +149,7 @@ $navig-font-color    :   $font-color !default
             flex-direction: row
             align-items: center
             width: auto
+            
             
             // Elements
             &__item
